syntax = "proto3";
package ru.aston.lab.example.grpc;



message HandshakeRequest  {

  string message = 1;
  string uuid = 2;
  string name = 3;

}

message HandshakeResponse {

  string message = 1;

}

service HandshakeService {
  // Для потоковой отправки добавить перед response - 'stream'
  rpc exchangeMessages(HandshakeRequest) returns (HandshakeResponse);

}